<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Jasane</string>
    <string name="loading">Memuat...</string>
    <string name="no_internet_connection">Tidak ada koneksi internet!</string>
    <string name="msg_selamat_datang">Selamat datang di JASANE</string>
    <string name="lbl_mulai">Mulai</string>
    <string name="msg_tempat_di_mana">Tempat di mana kebutuhan Anda menjadi prioritas utama. Mulailah mencari layanan kami sekarang!</string>
    <string name="lbl_jasane">JASANE</string>
    <string name="login">Masuk</string>
    <string name="title_login">Masukkan email dan kata sandi Anda dan nikmati layanannya.</string>
    <string name="masukkan_email_anda">Masukkan Email Anda</string>
    <string name="format_email_salah">Format Email Tidak Valid</string>
    <string name="masukkan_nama_anda">Masukkan Nama Anda</string>
    <string name="masukkan_password_anda">Masukkan Password Anda</string>
    <string name="password_kurang_dari_8">Password tidak boleh kurang dari 8 karakter</string>
    <string name="password">Kata Sandi</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="name_email">albert@gmail.com</string>
    <string name="lbl_register">Lengkapi Data Dirimu!</string>
    <string name="name">Nama</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="job_name">Cuci Piring</string>
    <string name="anggaran">Anggaran</string>
    <string name="strip">-</string>
    <string name="biaya_terendah">Rp100.000</string>
    <string name="biaya_tertinggi">Rp120.000</string>
    <string name="kerja_lepas">Kerja Lepas</string>
    <string name="maps">Peta</string>
    <string name="description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.  through the cites of the word in classical literature, discovered the undoubtable
Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.  through the cites of the word in classical literature, discovered the undoubtable </string>
    <string name="title_description">Deskripsi</string>
    <string name="ambil_pekerjaan">Ambil Pekerjaan</string>
    <string name="jarak">7 Kilometer</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="masukkan_no_handphone">Masukkan Nomor Handphone Anda</string>
    <string name="home">Beranda</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="penawaran">Penawaran</string>
    <string name="profile">Profil</string>
    <string name="konfirmasi_password">Konfirmasi Kata Sandi</string>
    <string name="name_user">Albert</string>
    <string name="pending">Tertunda</string>
    <string name="finish">Selesai</string>
    <string name="reject">Ditolak</string>
    <string name="accepted">Diterima</string>
    <string name="date">dd-mm-yyyy</string>
    <string name="address">Jalan Tanjung Duren Timur III RT.05/RW 02, Tanjung Duren, Kec. Tanah Sereal, Jakarta, Jawa Barat.</string>
    <string name="lbl_no_handphone">085187833232</string>
    <string name="rate_offer">Tarif yang ingin anda tawarkan</string>
    <string name="masukkan_nominalnya">Masukkan Tawaran</string>
    <string name="txt_description">Pengalaman Anda</string>
    <string name="lbl_Description">Jelaskan pengalaman</string>
    <string name="pasang_penawaran">Pasang Penawaran</string>
    <string name="pin_point">Titik Pin : %s</string>
    <string name="yeah">Yeah!</string>
    <string name="berhasil_login">Anda berhasil login.</string>
    <string name="berhasil_register">Pendaftaran Anda Berhasil. Silahkan Lengkapi Tahapan Selanjutnya!</string>
    <string name="gagal_login">Gagal Login</string>
    <string name="gagal_memuat_data">Gagal memuat data. Periksa koneksi internet Anda atau coba lagi nanti.</string>
    <string name="username_password_salah">Username atau Password Anda Salah</string>
    <string name="oke">Oke</string>
    <string name="alamat_rumah">Alamat Rumah Anda</string>
    <string name="logout">Keluar</string>
    <string name="pekerjaan_terdekat">Pekerjaan Terdekat</string>
    <string name="title_pending">Pending</string>
    <string name="title_accepted">Accepted</string>
    <string name="title_finish">Finish</string>
    <string name="title_reject">Reject</string>
    <string name="title_save">Simpan</string>
    <string name="title_kota">Kota/Kabupaten</string>
    <string name="title_provinsi">Provinsi</string>
    <string name="title_kecamatan">Kecamatan</string>
    <string name="title_kelurahan">kelurahan</string>
    <string name="title_address">Alamat Lengkap</string>
    <string name="masukkan_provinsi">Masukkan Provinsi</string>
    <string name="masukkan_kota">Masukkan Kota/Kabupaten</string>
    <string name="masukkan_kecamatan">Masukkan Kecamatan</string>
    <string name="masukkan_kelurahan">Masukkan Kelurahan</string>
    <string name="masukkan_address">Masukkan Alamat Lengkap</string>
    <string name="ketentuan_pertama">Pastikan foto anda terlihat dengan jelas dan tidak blur.</string>
    <string name="ketentuan_kedua">Pastikan foto anda tidak terpotong dan tertutupi.</string>
    <string name="ketentuan_ketiga">Pastikan Kartu Identitas anda masih berlaku.</string>
    <string name="ketentuan_keempat">Pastikan foto Kartu Identitas anda memakasi kartu yang asli bukan hasil fotocopy atau hasil scan.</string>
    <string name="ketentuan_kelima">Pastikan anda mengikuti dan memahami semua keterangan yang di atas.</string>
    <string name="ketentuan_foto_ktp">Ketentuan Foto KTP</string>
    <string name="title_scan_ktp">Ambil Foto KTP</string>
    <string name="verification_identity">Verifikasi Kartu Identitas Penduduk</string>
    <string name="title_biodata">Biodata</string>
    <string name="ya_mengerti">Ya, Mengerti</string>
    <string name="lbl_pin_point">PinPoint</string>
    <string name="select_location">Pilih Lokasi Anda</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="select">Pilih</string>
    <string name="current_location">Lokasi Sekarang</string>
    <string name="title_select_location">Pilih Titik Lokasi Anda!</string>
    <string name="title_nik">NIK</string>
    <string name="title_save_image">Simpan Scan KTP</string>
    <string name="title_date_birth">Tanggal Lahir</string>
</resources>