<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_20sp"
        android:layout_marginTop="@dimen/_16pxh"
        android:text="@string/title_select_location" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350pxh"
        android:layout_below="@id/text_view"
        android:layout_marginTop="@dimen/_16pxh"
        tools:context=".modules.maps.ui.MapsFragment" />

    <TextView
        android:id="@+id/text_view_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:layout_below="@id/map"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_location"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="@dimen/_16pxh"
        android:layout_marginStart="@dimen/_16pxh"
        android:layout_marginEnd="@dimen/_16pxh"
        android:text="@string/select" />

</RelativeLayout>
