<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onboardingVM" type="corp.jasane.worker.modules.onboarding.data.viewmodel.OnboardingVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearOnboarding"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageHeroOnboarding"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_403pxh"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_76pxv"
            android:layout_width="@dimen/_358pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_heroonboarding"
            tools:ignore="ContentDescription" tools:src="@drawable/img_heroonboarding"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtTitleOnboarding"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_84pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_12pxh"
            android:singleLine="true"
            android:text="@{onboardingVM.onboardingModel.txtTitleOnboarding}"
            style="@style/txtPoppinssemibold24" tools:text="@string/msg_selamat_datang"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtBodyTextOnboard"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:text="@{onboardingVM.onboardingModel.txtBodyTextOnboard}"
            style="@style/txtPoppinsregular14" tools:text="@string/msg_tempat_di_mana"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnMulai"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_50pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_68pxv"
            android:layout_width="@dimen/_295pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_mulai" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_mulai"/>
    </LinearLayout>
</layout>
